# altitude-mods

./: .gitignore  admins  default.nix  default_stam.nix  error  flight-engine.nix  launcher-config.nix
flight-club/: default.nix  flight-club.cabal
flight-club/src/: Main.hs
flight-club/src/FlightClub/: ActionEvent.hs  Actuator.hs  Behaviour.hs  Config.hs  Core.hs  IO.hs  Parser.hs  State.hs
flight-club/src/FlightClub/Core/: ActionEvent.hs  Behaviour.hs
