name:                flight-club
version:             0.1.0.0
author:              Magnetic Duck
maintainer:          zenmags@gmail.com

build-type:          Simple
cabal-version:       >=1.10

executable flight-club
  main-is:             Main.hs
  other-modules:       FlightClub.Parser
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
